--- a/Algorithm_DataStructure/练习题/吃奶酪.md
+++ b/Algorithm_DataStructure/练习题/吃奶酪.md
@@ -40,7 +40,7 @@
 
 #### 提示
 
-对于两个点 $(x_1,y_1)$，$(x_2, y_2)$，两点之间的距离公式为 $\sqrt{(x_1-x_2)^2+(y_1-y_2)^2}$。
+对于两个点 $(x_1,y_1)$，$(x_2, y_2)$，两点之间的距离公式为 $\sqrt{(x_1-x_2)^2+(y_1-y_2)^2}$ 
 
 ---
 
@@ -137,3 +137,134 @@ int main()
 ### 方法二
 
 这个题目的正确解法应该是状态压缩DP+位运算。
+
+本题会涉及到部分[位运算](https://oi-wiki.org//math/bit/)的知识
+
+本题是一道比较基础的状压DP题目。
+
+状压DP的时间复杂度为 $O(n^22^n)$，通常只能通过 N≤21 的数据范围，本题数据范围为 N≤15 因此可以使用状压DP。
+
+![[04b346de7e3248cd1a19368807501d1.png]]
+![[3b00d64bd63153beb3dbe7368ed44e0.png]]
+![[7d10d231a99127bcff49cf69742cbb0.png]]
+
+AC题解：
+```cpp
+#include <iostream>
+#include <cmath>
+#include <cstring>
+
+using namespace std;
+
+const int N = 16;
+const int M = 1 << N; //2^N
+
+double a[N][N]; //距离
+double f[N][M]; //状态函数 
+double x[N], y[N];
+
+//计算两点之间的距离
+double dist(int i, int j) //第i个奶酪到第j个奶酪之间的距离
+{
+    return sqrt((x[i] - x[j]) * (x[i] - x[j]) + (y[i] - y[j]) * (y[i] - y[j]));
+}
+
+int main()
+{
+    int n;
+    bool flag = false;
+
+    scanf("%d", &n);
+    for (int i = 1; i <= n; i++)
+    {
+        scanf("%lf%lf", x + i, y + i);
+        if (x[i] == 0 && y[i] == 0) //(0,0)的特殊情况，默认一开始就能吃到奶酪
+            flag = true;
+    }
+
+    //初始化距离数组
+    x[0] = 0.0, y[0] = 0.0;
+    a[0][0] = 0.0;
+    for (int i = 0; i < n; i++)
+    {
+        for (int j = i + 1; j <= n; j++)
+        {
+            a[i][j] = dist(i, j);
+            a[j][i] = a[i][j];
+        }
+    }
+
+
+    //初始化f数组 浮点数赋值无穷大
+    memset(f, 127, sizeof(f));
+    f[0][0] = 0;
+    for (int i = 1; i <= n; i++)
+    {
+        f[i][(1 << (i - 1))] = a[0][i];
+    }
+
+    //枚举，状态转移
+    for (int k = 1; k < (1 << n); k++) //[1，2^n-1]的所有状态
+    {
+        for (int i = 1; i <= n; i++) //终点是第 i 个奶酪
+        {
+            if ((k & (1 << (i - 1))) == 0)//这个状态的第i个奶酪还没有走到 无效状态
+                continue;
+
+            //枚举从j->i的所有状态转移
+            for (int j = 1; j <= n; j++) //起点是第 j 个奶酪 
+            {
+                if (i == j)
+                    continue;
+
+                if ((k & (1 << (j - 1))) == 0)
+                    continue;
+
+                f[i][k] = min(f[i][k], f[j][k - (1 << (i - 1))] + a[i][j]); //i == j时不适用这个转移方程
+            }
+        }
+
+    }
+
+    //最终的状态一定是 2^n -1 , 需要枚举的只是某个奶酪做结尾的情况
+    double res = 0x3f3f3f3f;
+    int tmp = (1 << n) - 1;
+    for (int i = 1; i <= n; i++)
+    {
+        res = min(res, f[i][tmp]);
+    }
+
+    printf("%.2lf", res);
+
+    return 0;
+}
+```
+
+踩雷点：
+
+- `(k & (1 << (i - 1))) == 0`  如果写成 `k & (1 << (i - 1)) == 0` 优先级就会改变，会造成WA
+- 最大的数据为15，但是由于下标从1开始，因此数组长度最少为16
+
+放一组hack数据
+```
+15
+0 0
+1 1
+1 -1
+-1 1
+-1 -1
+2 2
+2 0
+2 -2
+0 -2
+-2 -2
+-2 0
+-2 2
+0 2
+1 3
+1 4
+```
+
+```
+21.73
+```
