--- a/Algorithm_DataStructure/知识点、模板题/高精度.md
+++ b/Algorithm_DataStructure/知识点、模板题/高精度.md
@@ -43,3 +43,155 @@ int main()
     return 0;
 }
 ```
+
+### 减
+
+```cpp
+#include<iostream>
+#include<vector>
+
+using namespace std;
+
+bool cmp(vector<int> &A,vector<int> &B)
+{
+    if(A.size()!=B.size()) return A.size()>B.size();
+
+    for(int i=A.size()-1;i>=0;i--)
+        if(A[i]!=B[i])
+            return A[i]>B[i];
+
+    return true;
+}
+
+vector<int> sub(vector<int> &A,vector<int> &B)
+{
+    vector<int> C;
+    for(int i=0,t=0;i<A.size();i++)
+    {
+        t=A[i]-t;
+        if(i<B.size()) t-=B[i];
+        C.push_back((t+10)%10);
+        if(t<0) t=1;
+        else t=0;
+    }
+
+    while(C.size()>1&&C.back()==0) C.pop_back();
+    return C;
+}
+
+int main()
+{
+    string a,b;
+    cin>>a>>b;
+
+    vector<int> A,B;
+    for(int i=a.size()-1;i>=0;i--) A.push_back(a[i]-'0');
+    for(int i=b.size()-1;i>=0;i--) B.push_back(b[i]-'0');
+
+    vector<int> c;
+
+    if(cmp(A,B)) c=sub(A,B);
+    else c=sub(B,A),cout<<'-';
+
+    for(int i=c.size()-1;i>=0;i--) cout<<c[i];
+    cout<<endl;
+
+    return 0;
+}
+```
+
+### 乘
+
+```cpp
+#include<iostream>
+#include<vector>
+
+using namespace std;
+
+vector<int> mul(vector<int> &A,int b)
+{
+    vector<int> C;
+    int t=0;
+
+    for(int i=0;i<A.size()||t;i++)
+    {
+        if(i<A.size()) t+=A[i]*b;
+        C.push_back(t%10);
+        t/=10;
+    }
+
+    while(C.size()>1 && C.back()==0)
+        C.pop_back();
+
+    return C;
+}
+
+int main()
+{
+    string a;
+    int b;
+    cin>>a>>b;
+
+    vector<int> A;
+    //输入的时候务必将字符串转成数字类型
+    for(int i=a.size()-1;i>=0;i--)
+        A.push_back(a[i]-'0');
+
+    vector<int> c;
+    c=mul(A,b);
+
+    for(int i=c.size()-1;i>=0;i--) cout<<c[i];
+
+    return 0;
+}
+```
+
+### 除
+
+```cpp
+#include<iostream>
+#include<vector>
+#include<algorithm>
+
+using namespace std;
+
+vector<int> div(vector<int> &A,int b,int &r)
+{
+    vector<int> C;
+    r=0;
+    for(int i=A.size()-1;i>=0;i--)
+    {
+        r=r*10+A[i];
+        C.push_back(r/b);
+        r%=b;
+    }
+
+    //由于除法是从最高位开始运算，所以去除前导0之前需要进行反转操作
+    reverse(C.begin(),C.end());
+    while(C.size()>1 && C.back()==0) C.pop_back();
+
+    return C;
+}
+
+int main()
+{
+    string a;
+    int b;
+    cin>>a>>b;
+
+    vector<int> A;
+    for(int i=a.size()-1;i>=0;i--)
+        A.push_back(a[i]-'0');
+
+    int r;
+    auto c=div(A,b,r);
+
+    for(int i=c.size()-1;i>=0;i--)
+        cout<<c[i];
+
+    cout<<endl<<r<<endl;
+
+    return 0;
+}
+```
+
