--- a/Algorithm_DataStructure/练习题/接雨水.md
+++ b/Algorithm_DataStructure/练习题/接雨水.md
@@ -101,6 +101,11 @@ for(i:[0, n])
 样例模拟：
 ![](../zPictureStore/QQ2025117-93838-HD.mp4)
 
+<video width="650" height="350" controls>
+  <source src="../zPictureStore/QQ2025117-93838-HD.mp4" type="video/mp4">
+</video>
+
+[文件](<../zPictureStore/QQ2025117-93838-HD.mp4>)
 
 AC代码：
 ![](../zPictureStore/Snipaste_2025-01-17_10-53-49.png)
