--- a/Algorithm_DataStructure/知识点、模板题/二分.md
+++ b/Algorithm_DataStructure/知识点、模板题/二分.md
@@ -11,7 +11,7 @@ int binary_search(int q[], int l, int r)
 {
 	while(l<r)
 	{
-		int mid = (l+r)>>1;
+		int mid = (l+r+1)>>1;
 		if(check(mid)) l = mid;
 		else r = mid-1;
 	}
