--- a/Algorithm_DataStructure/代码随想录/数组/二分.md
+++ b/Algorithm_DataStructure/代码随想录/数组/二分.md
@@ -111,7 +111,7 @@ left == right + 1
 
 模板1 
 
-改动之处在于，次数数组并非严格单调递增，而是 ==单调不减的==
+改动之处在于，数组并非严格单调递增，而是 ==单调不减的==
 
 其余的逻辑不变，变化的只有 等于的 时候的处理逻辑。
 
@@ -233,6 +233,55 @@ public:
 
 
 ## 4  [367. 有效的完全平方数 - 力扣（LeetCode）](https://leetcode.cn/problems/valid-perfect-square/description/)
+
+注意两点：
+1. num == 1的时候，要么特判处理，要么 `+ 1`
+2. `num`的范围是`2^31 - 1` ，注意直接向上取整 `(num + 1) /2`，会造成`int` 类型的溢出。
+
+AC
+```cpp
+class Solution {
+public:
+    bool isPerfectSquare(int num) 
+    {
+        if(num == 1) return true;
+
+        int left = 0, right = num/2;
+        while(left <= right)
+        {
+            int mid = left + ((right - left)>>1);
+            if((long long)mid*mid > num) right = mid -1;
+            else if((long long)mid*mid < num) left = mid +1;
+            else return true;
+        }
+
+        return false;
+    }
+};
+```
+
+AC
+```cpp
+class Solution {
+public:
+    bool isPerfectSquare(int num) 
+    {
+        //if(num == 1) return true;
+
+        int left = 0, right = num/2 + 1;
+        while(left <= right)
+        {
+            int mid = left + ((right - left)>>1);
+            if((long long)mid*mid > num) right = mid -1;
+            else if((long long)mid*mid < num) left = mid +1;
+            else return true;
+        }
+
+        return false;
+    }
+};
+```
+
 
 
 
