--- a/Algorithm_DataStructure/代码随想录/数组/长度最小的子数组.md
+++ b/Algorithm_DataStructure/代码随想录/数组/长度最小的子数组.md
@@ -70,7 +70,7 @@ public:
 ```
 
 
-## 2 [76. 最小覆盖子串 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-window-substring/description/)
+	## 2 [76. 最小覆盖子串 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-window-substring/description/)
 
 这个题目一开始理解错了，以为只要`t`中的每个字符都出现就可以了，没想到数量也要对上。
 ```cpp
@@ -109,7 +109,7 @@ public:
 ```
 
 依然是滑动窗口的思想，但是要维护两个哈希表。
-
+AC1：
 ```cpp
 class Solution {
 public:
@@ -151,4 +151,72 @@ public:
         return ansL == -1 ? string() : s.substr(ansL, len);
     }
 };
+```
+
+AC2：
+```cpp
+class Solution 
+{
+public:
+    unordered_map<char, int> wnd, cnt; //维护两个哈希表
+
+    bool check()
+    {
+        // 遍历需求表，确保需求表中每个字符在窗口里 都满足数量要求
+        for(const auto &it : cnt)
+        {
+            if(wnd[it.first] < it.second)
+                return false; //不满足，窗口应该扩大
+        }
+        return true; //窗口内的数量符合
+    }
+
+    string minWindow(string s, string t) 
+    {
+        //初始化cnt
+        for(const auto &it : t)
+            cnt[it]++;
+        
+        int l = 0, r = 0;
+        int len = INT32_MAX, ansL = -1;
+        
+        while(r < s.size())
+        {
+            if(cnt.find(s[r]) != cnt.end())
+                wnd[s[r]]++;
+
+            while(check() && l <= r) //找到符合要求的窗口
+            {
+                if(r - l + 1 < len) //更新
+                {
+                    len = r - l + 1;
+                    ansL = l;
+                }
+                if(cnt.find(s[l]) != cnt.end())
+                    wnd[s[l]]--;
+                
+                l++;
+            }
+
+            r++;
+        }
+
+        return ansL == -1? "" : s.substr(ansL, len);
+    }
+};
+```
+
+关于AC2的 r 更新的位置；
+
+1.只有在cnt中又目标字符在更新 r ,导致死循环。
+```cpp
+if(cnt.find(s[r]) != cnt.end())
+    wnd[s[r]]++, r++;
+```
+
+2.r 更新的太早，后面的 while 区间和前面的区间并不等价。 
+```cpp
+if(cnt.find(s[r]) != cnt.end())
+    wnd[s[r]]++;
+r++;
 ```
